--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <!-- Proyek Card -->
           <div class="col-md-3 mb-4">
               <div class="card">
-                  <img class="card-img-top" src="https://pondokkodemks/test.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="test.jpg" alt="Card image cap">
                   <div class="card-body">
                       <h5 class="card-title">Proyek 1</h5>
                       <p class="card-text">Deskripsi singkat proyek 1.</p>
