--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Proyek 10</h5>
                     <p class="card-text">Deskripsi singkat proyek 1.</p>
-                    <a href="detail.html" class="btn btn-primary">Selengkapnya</a>
+                    <a href="https://pondokkodemks.github.io/detail.html" class="btn btn-primary">Selengkapnya</a>
                 </div>
             </div>
         </div>
