--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 
-    <!-- Navbar -->
+    <!-- Navbar
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Proyek Arduino</a>
+        <a class="navbar-brand" href="#">Selamat Datang</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,42 +41,64 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- Header -->
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
-            <h1 class="display-4">Proyek Arduino</h1>
-            <p class="lead">Deskripsi singkat proyek Arduino Anda.</p>
+            <h1 class="display-4">PONDOK KODE</h1>
+            <p class="lead">Hai, Sobat Elektronika! Temukan project seru dan mudah disini! 🤖✨ Ikuti kita di TikTok @pondok_kode dan IG @pondokkodemks untuk tips, trik, dan project terbaru! Let's build something amazing together! 🔧🚀</p>
         </div>
     </header>
 
     <!-- Content -->
     <section class="py-5">
         <div class="container">
-            <h2 class="display-4">Tentang Proyek</h2>
-            <p>Deskripsi lebih lanjut tentang proyek Arduino Anda.</p>
-            <p>Berikut adalah beberapa fitur utama:</p>
-            <ul>
-                <li>Fitur 1</li>
-                <li>Fitur 2</li>
-                <li>Fitur 3</li>
-            </ul>
-            <p>
-                <a href="#" class="btn btn-primary">Download Proyek</a>
-            </p>
+            <h3 class="display-5">Tentang Kami</h3>
+            <p>Pondok Kode adalah komunitas pecinta elektronika yang berdedikasi untuk menginspirasi dan memberdayakan pembuat dari berbagai tingkat keahlian. Dengan semangat berbagi pengetahuan dan kecintaan terhadap teknologi, kami menyajikan kumpulan proyek-proyek elektronika yang kreatif dan mudah diakses, membuka pintu bagi setiap orang untuk merasakan keajaiban dunia teknologi. Bergabunglah dengan kami dan jadilah bagian dari perjalanan eksplorasi yang penuh inspirasi ini! 🛠️💡</p>
+            <section class="py-5">
+                <div class="container">
+                    <!-- Konten lainnya -->
+                    <p>Kontak Saya:</p>
+                    <div class="contact-info">
+                        <div class="contact-block">
+                            <img src="assets/img/whatsapp.png" alt="WhatsApp" width="30">
+                            <a href="https://wa.me/+62813555533596" target="_blank">+62813555533596</a>
+                        </div>
+                        <div class="contact-block">
+                            <img src="assets/img/instagram.png" alt="Instagram" width="30">
+                            <a href="https://www.instagram.com/pondokkodemks" target="_blank">@pondokkodemks</a>
+                        </div>
+                        <div class="contact-block">
+                            <img src="assets/img/tiktok.png" alt="TikTok" width="30">
+                            <a href="https://www.tiktok.com/@pondok_kode" target="_blank">@pondok_kode</a>
+                        </div>
+                    </div>
+                    <!-- Konten lainnya -->
+                </div>
+            </section>
+            <style>
+                .contact-info {
+                    display: flex;
+                    flex-direction: column;
+                }
+
+                .contact-block {
+                    margin-bottom: 10px; /* Sesuaikan nilai sesuai kebutuhan Anda */
+                }
+            </style>
         </div>
     </section>
 <!-- Proyek Section -->
 <section class="bg-light py-5">
   <div class="container">
-      <h2 class="display-4 text-center mb-5">Proyek Terbaru</h2>
+      <h2 class="display-4 text-center mb-5">Daftar Project</h2>
       <div class="row">
 
           <!-- Proyek Card -->
           <div class="col-md-3 mb-4">
               <div class="card">
-                  <img class="card-img-top" src="https://pondokkodemks.github.io/test.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="https://placehold.it/300x200" alt="Card image cap">
                   <div class="card-body">
                       <h5 class="card-title">Proyek 1</h5>
                       <p class="card-text">Deskripsi singkat proyek 1.</p>
@@ -166,9 +188,9 @@
 
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-1 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Hak Cipta © 2024 Proyek Arduino</p>
+            <p class="m-0 text-center text-white">copyright © 2024 Pondok Kode</p>
         </div>
     </footer>
 
