--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;URL='https://duckling-novel-terribly.ngrok-free.app/sparepart/'">
-<!-- dwadwad -->
+    <!-- <meta http-equiv="refresh" content="0;URL='https://duckling-novel-terribly.ngrok-free.app/sparepart/'"> -->
     <title>Redirect</title>
 </head>
 <body>
