--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="refresh" content="0;URL='https://duckling-novel-terribly.ngrok-free.app/sparepart/'"> -->
+    <meta http-equiv="refresh" content="0;URL='https://duckling-novel-terribly.ngrok-free.app/sparepart/'">
     <title>Redirect</title>
 </head>
 <body>
